pxc/tests/test_011_foreach/fe_arr3.px

public namespace fe_arr3;
import core::common -;

varray{string} a;
a.resize(100, string());
int t = 0;
for (ulong i, long s : a) { // error
  t += numeric_cast{int, long}(s);
}

